test/good/classes/constructor05.px

class A def
    constructor def
        print 'A'


class B: A def
    x: Int


class C: B def
    constructor def
        print 'C'


B()
C()
