test/bad/classes/name04.px

class _ def
    x: Int
